--- a/lab2/xim49_lab02/.project
+++ b/lab2/xim49_lab02/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>xim49_Lab02</name>
+	<name>xim49_lab02</name>
 	<comment></comment>
 	<projects>
 	</projects>
